--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
         "prettier": "2.5.1",
         "sass": "^1.45.0",
         "typescript": "^4.5.4"
+    },
+    "overrides": {
+        "node-fetch": "3.1.1"
     }
 }
